# bioseal-sdk-samples

./: CHANGELOG.md  README.md  build_all.ps1  get_sdk.bat
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/eu/id3/bioseal/sample/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/eu/id3/bioseal/sample/: MainActivity.kt  Sample.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/eu/id3/bioseal/sample/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  build.bat  build.ps1  build.sh  id3BiosealSample.cpp
dart/id3_bioseal_sample/: .gitignore  README.md  pubspec.yaml
dotnet/: id3.BioSeal.Samples.sln
dotnet/id3.BioSeal.Samples/: Program.cs  id3.BioSeal.Samples.csproj
dotnet/id3.BioSeal.Samples/Properties/: AssemblyInfo.cs
dotnet/id3.BioSeal.Samples/Tools/: BioSealSDKTools.cs  HexTools.cs
ios/: .gitignore
ios/Bioseal Sample/Bioseal Sample/: Bioseal_SampleApp.swift  ContentView.swift  Sample.swift
ios/Bioseal Sample/Bioseal Sample.xcodeproj/: project.pbxproj
ios/Bioseal Sample/Bioseal Sample/Assets.xcassets/ExBioSealAccreditation.dataset/: Contents.json
ios/Bioseal Sample/Bioseal Sample/Assets.xcassets/ExBioSealBiographics.dataset/: Contents.json
ios/Bioseal Sample/Bioseal Sample/Assets.xcassets/ExBioSealFace.dataset/: Contents.json
java/: BiosealSdkSampleCLI.java  README.md  bioseal-sdk-samples.eml  build.bat  build.sh
python/: BiosealSdkSampleCLI.py  README.md
(+3 files in other folders)
